<resources>
    <string name="app_name">Android</string>
    <string name="welcome_text">Hello my!</string>
    <string name="textEmail"><i>e-mail adresa</i></string>
    <string name="textPassword"><i>lozinka</i></string>
    <string name="txtLogin">LOGIN</string>
    <string name="btnText">Prijavi se!</string>
    <string name="textPocetna">Evidencija vožnje</string>
    <string name="buttonTextAdmin">Administracija</string>
    <string name="label">label</string>
    <string name="txtSpisakVozila">Evidencija vožnje</string>
    <string name="btnVozila">Vozila</string>
    <string name="btnNovaVoznja">Nova vožnja</string>
    <string name="btnZatvoriVoznju">Zatvori vožnju</string>
    <string name="imgPositive">PositiveImg</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textSpisakVozila">Spisak vozila</string>
    <string name="textSpisakKorisnika">Spisak korisnika</string>
    <string name="textOtvaranjeVoznje">Otvaranje vožnje</string>
    <string name="hintVozilo"><i>odaberi vozilo</i></string>
    <string name="hintPocetnaKm"><i>početna km</i></string>
    <string name="hintLokacija"><i>destinacija</i></string>
    <string name="lokacija">Novi Sad</string>
    <string name="svrha_voznje"><i>svrha vožnje</i></string>
    <string name="stanje_vozila"><i>stanje vozila</i></string>
    <string name="vremePocetkaVoznje"><i>vreme početka vožnje</i></string>
    <string name="korisnik"><i>korisnik</i></string>
    <string name="napomena">napomena</string>
    <string name="napomenaMultiline">napomena:</string>
    <string name="btnGorivo">Gorivo</string>
    <string name="btnServis">Servis</string>
    <string name="btnPranje">Pranje</string>
    <string name="textZatvaranjeVoznje">Zatvaranje vožnje</string>
    <string name="hintZavrsnaKm"><i>završna km</i></string>
    <string name="vremeZavrsetkaVoznje"><i>vreme završetka vožnje</i></string>
    <string name="textVoziloNaziv"><i>vozilo</i></string>
    <string name="vrsta_goriva">vrsta goriva</string>
    <string name="sipano_litara">sipano litara</string>
    <string name="iznos">iznos</string>
    <string name="admin_stranica">Admin stranica</string>
    <string name="lista_vozila">Lista vozila</string>
    <string name="lista_voznji">Lista vožnji</string>
    <string name="lista_korisnika">Lista korisnika</string>


</resources>
